syntax = "proto3";

package rpc;
option go_package = "./rpc";

// 爬虫服务定义
service CrawlerService {
  // 抓取指定URL
  rpc Fetch(FetchRequest) returns (FetchResponse);
  // 批量抓取
  rpc BatchFetch(BatchFetchRequest) returns (BatchFetchResponse);
}

// 抓取请求
message FetchRequest {
  string url = 1;
  map<string, string> headers = 2;
  string user_agent = 3;
  TLSClientType tls_client = 4;
}

// 批量抓取请求
message BatchFetchRequest {
  repeated FetchRequest requests = 1;
  int32 max_concurrent = 2;
}

// 响应
message FetchResponse {
  string url = 1;
  int32 status_code = 2;
  map<string, string> headers = 3;
  bytes body = 4;
  string error = 5;
}

// 批量响应
message BatchFetchResponse {
  repeated FetchResponse responses = 1;
}

// TLS客户端类型
enum TLSClientType {
  DEFAULT = 0;
  CHROME = 1;
  FIREFOX = 2;
  SAFARI = 3;
  IOS = 4;
  ANDROID = 5;
  EDGE = 6;
}